# llama.cpp-omni

./: .gitignore  .gitignore copy  README.md  convert_hf_to_gguf.py
.devops/: s390x.Dockerfile
.devops/nix/: package.nix
.github/workflows/: build.yml  docker.yml  release.yml  update-ops-docs.yml
ci/: run.sh
common/: arg.cpp  arg.h  chat-parser.cpp  chat.h  common.h  download.cpp  download.h  json-partial.cpp  sampling.cpp  sampling.h
docs/: ops.md
docs copy/: ops.md
docs copy/ops/: SYCL.csv
docs/ops/: SYCL.csv
examples/model-conversion/: Makefile  README.md  logits.cpp
examples/model-conversion/scripts/embedding/: run-converted-model.sh  run-original-model.py
examples/model-conversion/scripts/utils/: semantic_check.py
examples/speculative-simple/: speculative-simple.cpp
ggml/include/: ggml-backend.h
ggml/src/ggml-cuda/: common.cuh  conv-transpose-1d-gemm.cu  conv-transpose-1d-gemm.cuh  conv-transpose-1d.cu  ggml-cuda.cu
ggml/src/ggml-metal/: ggml-metal-context.m  ggml-metal-device.cpp  ggml-metal-device.m
gguf-py/gguf/: constants.py  gguf_writer.py  tensor_mapping.py
include/: llama.h
src/: llama-arch.cpp  llama-arch.h  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-sampler.cpp  llama.cpp
tests/: test-backend-ops.cpp  test-chat-parser.cpp  test-reasoning-budget.cpp
tools/: CMakeLists.txt
tools/mtmd/: clip.cpp  mtmd-audio.cpp  mtmd.cpp
tools/omni/: CMakeLists.txt  audition.cpp  audition.h  omni-cli.cpp  omni-impl.h  omni.cpp  omni.h  vision.cpp  vision.h
tools/omni/convert/: convert.sh  convert_apm.py  convert_projector.py  convert_tts.py  convert_vpm.py  model.txt  run_convert.sh  surgery.py  tts.txt
tools/omni/coreml/: coreml_minicpmo45_vit_all_f16.h  coreml_minicpmo45_vit_all_f16.m  omni_coreml.h  omni_coreml.mm
tools/omni/pyt2w/: requirements.txt  test_service.py  token2wav_service.py
tools/omni/test/: merge_wav.sh  single_test_audio.cpp  single_test_omni.cpp  test-duplex.cpp
tools/omni/token2wav/: readme.txt  token2wav-example.cpp  token2wav-impl.cpp  token2wav-impl.h  token2wav-profile.h  token2wav.cpp  token2wav.h
tools/omni/voxcpm2/: README.md  convert_voxcpm2_to_gguf.py  voxcpm2_audiovae.cpp  voxcpm2_cli.cpp  voxcpm2_components.cpp  voxcpm2_components.h  voxcpm2_fsq.cpp  voxcpm2_fsq.h  voxcpm2_localenc.cpp  voxcpm2_locdit.cpp  voxcpm2_locdit.h  voxcpm2_runtime.cpp  voxcpm2_runtime.h  voxcpm2_transformer.cpp  voxcpm2_transformer.h
tools/server/: CMakeLists.txt  protocol.cpp  protocol.h  server-context.h  server-models.h  server-omni.cpp  server-voxcpm2.cpp  server.cpp  session.cpp  session.h  utils.hpp  ws_handler.cpp  ws_handler.h
tools/server/tests/: utils.py
tools/server/tests/unit/: test_basic.py  test_chat_completion.py  test_completion.py  test_ctx_shift.py
tools/server/webui/: package.json
tools/ui/: README.md  package.json  playwright.config.ts
tools/ui/src/lib/components/app/chat/ChatForm/: ChatForm.svelte
tools/ui/src/lib/components/app/chat/ChatForm/ChatFormActions/: ChatFormActions.svelte
tools/ui/src/lib/components/app/chat/ChatForm/ChatFormActions/ChatFormActionAdd/: ChatFormActionAddDropdown.svelte  ChatFormActionAddSheet.svelte  ChatFormActionAddToolsSubmenu.svelte
tools/ui/src/lib/components/app/content/: index.ts
tools/ui/src/lib/components/app/content/MarkdownContent/plugins/rehype/: enhance-code-blocks.ts
tools/ui/src/lib/components/app/dialogs/: index.ts
tools/ui/src/lib/components/app/models/: ModelId.svelte  ModelsSelectorDropdown.svelte  ModelsSelectorSheet.svelte
tools/ui/src/lib/components/app/settings/SettingsChat/: SettingsChatToolsTab.svelte
tools/ui/src/lib/constants/: attachment-menu.ts  icons.ts  index.ts  storage.ts
tools/ui/src/lib/hooks/: use-tools-panel.svelte.ts
tools/ui/src/lib/stores/: conversations.svelte.ts  server.svelte.ts  tools.svelte.ts
tools/ui/src/lib/types/: chat.d.ts  database.d.ts  settings.d.ts
tools/ui/tests/stories/: ChatScreenForm.a11y.stories.svelte
